--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "NewsFlash AI",
-  "short_name": "NewsFlash",
+  "short_name": "NewsFlash AI",
   "start_url": "/",
   "display": "standalone",
   "icons": [
